--- a/code/style.css
+++ b/code/style.css
@@ -11,6 +11,14 @@ h1 {
   margin-bottom: 0px;
 }
 
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #FA382F;
+  padding: 4px;
+}
+
 h3 {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.3em;
@@ -30,10 +38,11 @@ header {
   background: #080045;  
 }
 
+/*** HEADER SECTION ***/
+
 .thin {
   font-weight: 300;
 }
-
 
 .hero-image {
   background-image: url(./assets/paint.jpeg);
@@ -94,7 +103,10 @@ header {
   right: 180px;
 }
 
+/*** INTRO SECTION ***/
+
 .intro {
+  border-top: 2px solid #ffffff;
   background-color: #f4f4f4;
   width: 100%;
   padding: 3em;
@@ -103,12 +115,33 @@ header {
 .intro-txt {
   font-weight: 300;
   display: flex;
-  width: 40%;
+  width: 50%;
   font-size: 1em;
   line-height: 1.8em;
   position: relative;
   left: 16.5%;
 }
 
-/* font-family: 'Montserrat', ;
-  font-family: 'Roboto', ; */
+/*** TECH SECTION ***/
+
+.tech {
+  padding-top: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.tech-txt {
+  font-weight: 300;
+  width: 50%;
+  font-size: 1em;
+  line-height: 1.8em;
+  position: relative;
+  text-align: center;
+}
+
+.red {
+  color: #FA382F;
+}
+
