--- a/code/style.css
+++ b/code/style.css
@@ -50,6 +50,7 @@ h6 {
   margin: 0;
 }
 
+
 header {
   background: #080045;  
 }
@@ -61,7 +62,7 @@ header {
 }
 
 .hero-image {
-  background-image: url(./assets/paint.jpeg);
+  background-image: url(./assets/paint2.jpg);
   height: 400px;
   background-attachment: fixed;
   background-size: cover;
@@ -191,6 +192,7 @@ header {
   width: 25%;
   text-align: start;
   min-width: 320px;
+  position: relative;
 }
 
 .image-box {
@@ -208,11 +210,8 @@ header {
 .over-image {
   transition: 0.5s ease;
   opacity: 1;
-  position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   text-align: center;
   background: #FA382F;
 }
@@ -224,7 +223,7 @@ header {
   top: 50%;
   left: 50%;
   color: #ffffff;
-  background-color: blueviolet;
+  background-color: #072BCE;
 }
 
 .project-description {
@@ -370,3 +369,60 @@ header {
   flex-direction: column;
   padding-top: 2em;
 }
+
+.circles-red {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 4em;
+}
+
+.circle-red {
+  border: 2.5px solid #FA382F;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  margin: 10px 40px 20px 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+.circles-red p {
+  font-size: .8em;
+  text-align: center;
+}
+
+.icons-red {
+  width: 32px;
+  height: 32px;
+  padding: 8px;
+}
+
+
+/*** CONTACT ***/
+
+.contact-section {
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  background-color: #072BCE;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-text {
+  padding: 5em 0 10em 0;
+  margin: 0;
+  align-self: center;
+  text-align: center;
+  font-weight: 300;
+  line-height: 2em;
+}
+
+.contact {
+  color: #ffffff;
+}
+
+.contact-text p {
+  margin: 0;
+}
+
