--- a/code/style.css
+++ b/code/style.css
@@ -150,6 +150,32 @@ header {
   position: relative;
 }
 
+.red-line {
+  height: 3px;
+  width: 50px;
+  background: #FA382F;
+  position: relative;
+  float:left;
+  top: 13px;
+  margin-right: 10px;  
+}
+
+.red-line::after {
+  content: '';
+  height: 10px;
+  width: 10px;
+  position: relative;
+  float: right;
+  top: -3px;
+  right: -1px;
+  border-radius: 50%;
+  background: #FA382F;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
 /*** TECH SECTION ***/
 
 .tech {
