--- a/code/style.css
+++ b/code/style.css
@@ -227,7 +227,6 @@ header {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  /* max-width: 800px; */
 }
 
 .card {
@@ -257,11 +256,24 @@ header {
 
 .over-image {
   transition: 0.5s ease;
-  opacity: 1;
+  opacity: 0;
   top: 50%;
   left: 50%;
   text-align: center;
   background: #FA382F;
+}
+
+.card:hover .over-image{
+  opacity: 1;
+  transition: background-color .5s ease-in, opacity .5s ease-in;
+  -webkit-transition: background-color .5s ease-in, opacity .5s ease-in;
+  -moz-transition: background-color .5s ease-in, opacity .5s ease-in;
+  -ms-transition: background-color .5s ease-in, opacity .5s ease-in;
+  -o-transition: background-color .5s ease-in, opacity .5s ease-in;
+}
+
+.over-image:hover {
+  opacity: 1;
 }
 
 
