--- a/code/style.css
+++ b/code/style.css
@@ -148,7 +148,7 @@ header {
 
 .intro {
   border-top: 2px solid #ffffff;
-  background-color: #ffedfa;
+  background-color: #f4f4f4;
   width: 100%;
   padding: 3em 0;
 }
@@ -200,7 +200,7 @@ header {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #ffedfa;
+  background-color: #f4f4f4;
   width: 100%;
   
 }
@@ -248,7 +248,6 @@ header {
   top: 50%;
   left: 50%;
   text-align: center;
-  /* background: #FA382F; */
 }
 
 .card:hover .over-image{
@@ -313,7 +312,7 @@ header {
 }
 
 .tag {
-  background-color: #ffe285;
+  background-color: #ffdef6;
   padding: 3px 10px 3px 10px;
   margin: 3px; 
 }
@@ -511,7 +510,7 @@ header {
 .contact-section {
   font-family: 'Montserrat', sans-serif;
   color: #ffffff;
-  background-color: #072BCE;
+  background-color: #5773fa;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
