--- a/code/style.css
+++ b/code/style.css
@@ -52,7 +52,7 @@ h6 {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #3b3b3b;
 }
 
 header {
@@ -280,7 +280,7 @@ header {
   padding-top: 1em;
   padding-bottom: .8em;
   text-decoration: none;
-  color: black;
+  color: #3b3b3b;
 }
 
 .project-description:hover {
