--- a/code/style.css
+++ b/code/style.css
@@ -312,7 +312,7 @@ header {
 }
 
 .tag {
-  background-color: #ffdef6;
+  background-color: #d1ebff;
   padding: 3px 10px 3px 10px;
   margin: 3px; 
 }
