--- a/code/style.css
+++ b/code/style.css
@@ -70,7 +70,7 @@ header {
   /* background-position: 50% -50%; */
   width: 100vw;
   height: 400px;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-size: cover;
   opacity: 1;  
 }
